gcc/testsuite/rust/rustc/ui/rfc-2457/crate_name_nonascii_forbidden-2.rs
// compile-flags:--extern му_сгате
// edition:2018
#![feature(non_ascii_idents)]

use му_сгате::baz; // { dg-error "" "" { target *-*-* } }

fn main() {}

